++ updeta css Mobile (none img caterogy giay dep)

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
 
             <div class="Category_item">
-                <div class="category_img">
+                <div class="category_img category_imgGD">
                     <img src="https://images.pexels.com/photos/13823879/pexels-photo-13823879.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="ULaTrui">
                 </div>
